msa/aws-msa-full-ui-cleaned/msa/k8s/k8s-monitoring/monitoring-Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: my-issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - prometheus.aws-esk.com
    - grafana.aws-esk.com
    secretName: monitor-aws-esk-com-tls
  rules:
  - host: prometheus.aws-esk.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-service
            port:
              number: 9090

  - host: grafana.aws-esk.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
